--- a/account_balance_reporting/i18n/es.po
+++ b/account_balance_reporting/i18n/es.po
@@ -6,16 +6,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenERP Server 5.0.6\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
-"POT-Creation-Date: 2013-07-31 07:35+0000\n"
-"PO-Revision-Date: 2013-07-31 09:37+0100\n"
-"Last-Translator: Jesús Martín <jmartin@zikzakmedia.com>\n"
+"POT-Creation-Date: 2013-07-31 07:52+0000\n"
+"PO-Revision-Date: 2013-12-20 02:33+0000\n"
+"Last-Translator: jmartin (Zikzakmedia) <jmartin@zikzakmedia.com>\n"
 "Language-Team: \n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-07-30 05:31+0000\n"
-"X-Generator: Launchpad (build 13405)\n"
+"X-Launchpad-Export-Date: 2013-12-20 05:21+0000\n"
+"X-Generator: Launchpad (build 16872)\n"
+"Language: \n"
 
 #. module: account_balance_reporting
 #: field:account.balance.reporting.line.account,report_line_id:0
@@ -76,6 +76,7 @@ msgid "Debit-Credit, reversed with brakets"
 msgstr "Debe-Haber, inverso con paréntesis"
 
 #. module: account_balance_reporting
+#: report:report_account_balance_reporting.generic_detailed:0
 #: report:report_account_balance_reporting.generic_non_zero_detailed:0
 msgid "D"
 msgstr "D"
@@ -120,7 +121,9 @@ msgstr "Cuentas de línea"
 #. module: account_balance_reporting
 #: help:account.balance.reporting.template.line,code:0
 msgid "Concept code, may be used on formulas to reference this line"
-msgstr "Código de concepto, puede ser usado en las fórmulas para referenciar esta línea."
+msgstr ""
+"Código de concepto, puede ser usado en las fórmulas para referenciar esta "
+"línea."
 
 #. module: account_balance_reporting
 #: help:account.balance.reporting.template.line,sequence:0
@@ -181,7 +184,6 @@ msgstr "Estado"
 
 #. module: account_balance_reporting
 #: field:account.balance.reporting.line.account,debit:0
-#: report:report_account_balance_reporting.generic_detailed:0
 msgid "Debit"
 msgstr "Debe"
 
@@ -199,13 +201,15 @@ msgstr "Detalles ejercicio fiscal 2"
 #. module: account_balance_reporting
 #: help:account.balance.reporting.template,balance_mode:0
 msgid ""
-"Formula calculation mode: Depending on it, the balance is calculated as follows:\n"
+"Formula calculation mode: Depending on it, the balance is calculated as "
+"follows:\n"
 "  Mode 0: debit-credit (default);\n"
 "  Mode 1: debit-credit, credit-debit for accounts in brackets;\n"
 "  Mode 2: credit-debit;\n"
 "  Mode 3: credit-debit, debit-credit for accounts in brackets."
 msgstr ""
-"Modo de cálculo de la fórmula: Dependiendo de éste, el saldo se calcula como sigue:\n"
+"Modo de cálculo de la fórmula: Dependiendo de éste, el saldo se calcula como "
+"sigue:\n"
 "  Modo 0: debe-haber (por defecto);\n"
 "  Modo 1: debe-haber, haber-debe para las cuentas con paréntesis;\n"
 "  Modo 2: haber-debe;\n"
@@ -229,7 +233,8 @@ msgid ""
 "comparing the values of 'accounting concepts' between two fiscal years\n"
 "or a set of fiscal periods.\n"
 "\n"
-"Accounting concepts values can be calculated as the sum of some account balances,\n"
+"Accounting concepts values can be calculated as the sum of some account "
+"balances,\n"
 "the sum of its children, other account concepts or constant values.\n"
 "\n"
 "Generated reports are stored as objects on the server,\n"
@@ -237,36 +242,46 @@ msgid ""
 "(to add notes for example) before printing.\n"
 "\n"
 "The module lets the user add new templates of the reports concepts,\n"
-"and associate them a specific \"XML reports\" (OpenERP RML files for example)\n"
+"and associate them a specific \"XML reports\" (OpenERP RML files for "
+"example)\n"
 "with the design used when printing.\n"
 "So it is very easy to add predefined country-specific official reports.\n"
 "\n"
-"The user interface has been designed to be as much user-friendly as it can be.\n"
+"The user interface has been designed to be as much user-friendly as it can "
+"be.\n"
 "\n"
 "Note: It has been designed to meet Spanish/Spain localization needs,\n"
 "but it might be used as a generic accounting report engine.\n"
 "            "
 msgstr ""
 "\n"
-"El módulo permite al usuario crear informes y plantillas de balances contables,\n"
-"comparando los valores de 'conceptos contables' entre dos ejercicios fiscales\n"
+"El módulo permite al usuario crear informes y plantillas de balances "
+"contables,\n"
+"comparando los valores de 'conceptos contables' entre dos ejercicios "
+"fiscales\n"
 "o un conjunto de periodos fiscales.\n"
 "\n"
-"Los valores de los conceptos contables pueden ser calculados como la suma de los saldos de algunas cuentas,\n"
+"Los valores de los conceptos contables pueden ser calculados como la suma de "
+"los saldos de algunas cuentas,\n"
 "la suma de sus hijos, otros conceptos contables o valores constantes.\n"
 "\n"
 "Los informes generados se almacenan como objetos en el servidor,\n"
 "así que se pueden consultar más tarde o editar\n"
 "(para añadir notas por ejemplo) antes de imprimir.\n"
 "\n"
-"El módulo permite al usuario añadir nuevas plantillas de conceptos fiscales,\n"
-"y asociarles \"informes XML\" (archivos RML de OpenERP por ejemplo) específicos\n"
+"El módulo permite al usuario añadir nuevas plantillas de conceptos "
+"fiscales,\n"
+"y asociarles \"informes XML\" (archivos RML de OpenERP por ejemplo) "
+"específicos\n"
 "con el diseño a usar en la impresión.\n"
-"Así que es muy fácil añadir informes oficiales predefinidos específicos de un país.\n"
+"Así que es muy fácil añadir informes oficiales predefinidos específicos de "
+"un país.\n"
 "\n"
-"La interfaz de usuario ha sido diseñada para ser tan amigable como es posible.\n"
+"La interfaz de usuario ha sido diseñada para ser tan amigable como es "
+"posible.\n"
 "\n"
-"Nota: Ha sido diseñado para cubrir las necesidades de la localización Española/España,\n"
+"Nota: Ha sido diseñado para cubrir las necesidades de la localización "
+"Española/España,\n"
 "pero puede ser usado como un motor de informes contables genérico.\n"
 "            "
 
@@ -303,6 +318,7 @@ msgid "Report design"
 msgstr "Diseño del informe"
 
 #. module: account_balance_reporting
+#: report:report_account_balance_reporting.generic_detailed:0
 #: report:report_account_balance_reporting.generic_non_zero_detailed:0
 msgid "C"
 msgstr "H"
@@ -420,7 +436,6 @@ msgstr "Sistema"
 
 #. module: account_balance_reporting
 #: field:account.balance.reporting.line.account,credit:0
-#: report:report_account_balance_reporting.generic_detailed:0
 msgid "Credit"
 msgstr "Haber"
 
@@ -600,19 +615,25 @@ msgstr "]"
 #: help:account.balance.reporting.template.line,current_value:0
 #: help:account.balance.reporting.template.line,previous_value:0
 msgid ""
-"Value calculation formula: Depending on this formula the final value is calculated as follows:\n"
+"Value calculation formula: Depending on this formula the final value is "
+"calculated as follows:\n"
 "  Empy template value: sum of (this concept) children values.\n"
 "  Number with decimal point (\"10.2\"): that value (constant).\n"
-"  Account numbers separated by commas (\"430,431,(437)\"): Sum of the account balances\n"
+"  Account numbers separated by commas (\"430,431,(437)\"): Sum of the "
+"account balances\n"
 "    (the sign of the balance depends on the balance mode).\n"
-"  Concept codes separated by \"+\" (\"11000+12000\"): Sum of those concepts values.\n"
+"  Concept codes separated by \"+\" (\"11000+12000\"): Sum of those concepts "
+"values.\n"
 msgstr ""
-"Fórmula de cálculo del valor: Dependiendo de esta fórmula el valor final se calcula como sigue:\n"
+"Fórmula de cálculo del valor: Dependiendo de esta fórmula el valor final se "
+"calcula como sigue:\n"
 "  Valor vacío: suma de los valores de los hijos (de este concepto).\n"
 "  Número con punto decimal (\"10.2\"): ese número (constante).\n"
-"  Números de cuentas separados por comas (\"430,431,(437)\"): Suma de los saldos de las cuentas\n"
+"  Números de cuentas separados por comas (\"430,431,(437)\"): Suma de los "
+"saldos de las cuentas\n"
 "    (el signo del saldo depende del modo de saldo).\n"
-"  Códigos de conceptos separados por \"+\" (\"11000+12000\"): Suma de los valores de dichos conceptos.\n"
+"  Códigos de conceptos separados por \"+\" (\"11000+12000\"): Suma de los "
+"valores de dichos conceptos.\n"
 
 #. module: account_balance_reporting
 #: report:report_account_balance_reporting.generic:0
@@ -659,20 +680,14 @@ msgstr "Informe cuentas anuales"
 msgid "Account balance reporting engine"
 msgstr "Motor de informes de balances contables"
 
-#~ msgid "Invalid model name in the action definition."
-#~ msgstr "Nombre de modelo no válido en la definición de la acción."
-
-#~ msgid "Invalid XML for View Architecture!"
-#~ msgstr "¡XML no válido para la definición de la vista!"
+#~ msgid "account.balance.report.template.line"
+#~ msgstr "account.balance.report.template.line"
 
 #~ msgid ""
 #~ "The Object name must start with x_ and not contain any special character !"
 #~ msgstr ""
 #~ "¡El nombre del objeto debe empezar con x_ y no contener ningún carácter "
 #~ "especial!"
-
-#~ msgid "account.balance.report.template.line"
-#~ msgstr "account.balance.report.template.line"
 
 #~ msgid "account.balance.report.line"
 #~ msgstr "account.balance.report.line"
@@ -682,3 +697,9 @@ msgstr "Motor de informes de balances contables"
 
 #~ msgid "account.balance.report.template"
 #~ msgstr "account.balance.report.template"
+
+#~ msgid "Invalid model name in the action definition."
+#~ msgstr "Nombre de modelo no válido en la definición de la acción."
+
+#~ msgid "Invalid XML for View Architecture!"
+#~ msgstr "¡XML no válido para la definición de la vista!"
