Launchpad automatic translations update.

--- a/sale/i18n/zh_TW.po
+++ b/sale/i18n/zh_TW.po
@@ -7,19 +7,19 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0dev_rc3\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2012-12-21 17:04+0000\n"
-"PO-Revision-Date: 2010-08-07 04:21+0000\n"
-"Last-Translator: Fabien (Open ERP) <fp@tinyerp.com>\n"
+"PO-Revision-Date: 2013-12-24 11:05+0000\n"
+"Last-Translator: Andy Cheng <andy@dobtor.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-09-12 05:42+0000\n"
-"X-Generator: Launchpad (build 16761)\n"
+"X-Launchpad-Export-Date: 2013-12-25 06:02+0000\n"
+"X-Generator: Launchpad (build 16877)\n"
 
 #. module: sale
 #: model:res.groups,name:sale.group_analytic_accounting
 msgid "Analytic Accounting for Sales"
-msgstr ""
+msgstr "銷售分析科目"
 
 #. module: sale
 #: model:process.transition,name:sale.process_transition_confirmquotation0
@@ -29,24 +29,24 @@ msgstr "確認報價"
 #. module: sale
 #: view:board.board:0
 msgid "Sales Dashboard"
-msgstr ""
+msgstr "業務儀錶版"
 
 #. module: sale
 #: code:addons/sale/wizard/sale_make_invoice_advance.py:92
 #, python-format
 msgid "There is no income account defined as global property."
-msgstr ""
+msgstr "沒有任何收益科目被定義為全域屬性。"
 
 #. module: sale
 #: model:ir.actions.act_window,name:sale.action_order_line_tree2
 #: model:ir.ui.menu,name:sale.menu_invoicing_sales_order_lines
 msgid "Order Lines to Invoice"
-msgstr ""
+msgstr "依訂單項目開立發票"
 
 #. module: sale
 #: field:sale.order,date_confirm:0
 msgid "Confirmation Date"
-msgstr ""
+msgstr "確認日期"
 
 #. module: sale
 #: view:sale.order:0
@@ -58,12 +58,12 @@ msgstr "分類方式..."
 #. module: sale
 #: field:sale.order.line,address_allotment_id:0
 msgid "Allotment Partner"
-msgstr ""
+msgstr "再分配給業務夥伴"
 
 #. module: sale
 #: model:ir.actions.act_window,name:sale.action_view_sale_advance_payment_inv
 msgid "Invoice Order"
-msgstr ""
+msgstr "產生訂單發票"
 
 #. module: sale
 #: view:sale.config.settings:0
@@ -82,6 +82,12 @@ msgid ""
 "invoice automatically.\n"
 "            It installs the account_analytic_analysis module."
 msgstr ""
+"讓您可以自行定義客戶的合約條款：\n"
+"開立發票方式 (固定價格，根據工時表，定金發票)。\n"
+"固定價格( 如，每一開發人員 650 歐元/日 )\n"
+"期間 (如，一年的技術支援合約)\n"
+"您可以能夠依照合約執行進度自動開立發票。\n"
+"本項功能安裝於 account_analytic_analysis 模組。"
 
 #. module: sale
 #: model:email.template,report_name:sale.email_template_edi_sale
@@ -104,23 +110,23 @@ msgstr "採購方式"
 #. module: sale
 #: help:sale.order,date_confirm:0
 msgid "Date on which sales order is confirmed."
-msgstr ""
+msgstr "銷售訂單於該日期確認"
 
 #. module: sale
 #: field:account.config.settings,module_sale_analytic_plans:0
 msgid "Use multiple analytic accounts on sales"
-msgstr ""
+msgstr "在業務銷售中啟用多個分析科目"
 
 #. module: sale
 #: selection:sale.report,month:0
 msgid "March"
-msgstr ""
+msgstr "三月"
 
 #. module: sale
 #: code:addons/sale/sale.py:565
 #, python-format
 msgid "First cancel all invoices attached to this sales order."
-msgstr ""
+msgstr "請先取消此銷售訂單附帶的所有發票。"
 
 #. module: sale
 #: view:sale.order:0
@@ -140,7 +146,7 @@ msgstr "未讀訊息"
 #: field:sale.report,company_id:0
 #: field:sale.shop,company_id:0
 msgid "Company"
-msgstr ""
+msgstr "公司"
 
 #. module: sale
 #: field:sale.make.invoice,invoice_date:0
@@ -166,17 +172,17 @@ msgstr "發票異常情況"
 #. module: sale
 #: view:sale.order:0
 msgid "Quotation "
-msgstr ""
+msgstr "報價 "
 
 #. module: sale
 #: selection:sale.order,state:0
 msgid "Draft Quotation"
-msgstr ""
+msgstr "報價單草稿"
 
 #. module: sale
 #: field:sale.order,partner_shipping_id:0
 msgid "Delivery Address"
-msgstr ""
+msgstr "送貨地址"
 
 #. module: sale
 #: view:sale.report:0
@@ -188,7 +194,7 @@ msgstr "分析科目"
 #. module: sale
 #: field:sale.config.settings,module_sale_journal:0
 msgid "Allow batch invoicing of delivery orders through journals"
-msgstr ""
+msgstr "允許透過日記帳的送貨單批次大量開立發票。"
 
 #. module: sale
 #: field:sale.order.line,price_subtotal:0
@@ -199,7 +205,7 @@ msgstr "小計"
 #: view:sale.report:0
 #: field:sale.report,day:0
 msgid "Day"
-msgstr ""
+msgstr "日"
 
 #. module: sale
 #: model:process.transition.action,name:sale.process_transition_action_cancelorder0
@@ -215,39 +221,39 @@ msgstr "重量"
 #. module: sale
 #: view:sale.config.settings:0
 msgid "Warehouse Features"
-msgstr ""
+msgstr "倉儲功能"
 
 #. module: sale
 #: field:sale.config.settings,time_unit:0
 msgid "The default working time unit for services is"
-msgstr ""
+msgstr "預設的服務工時單位是"
 
 #. module: sale
 #: field:sale.order.line,product_uom:0
 msgid "Unit of Measure "
-msgstr ""
+msgstr "度量單位 "
 
 #. module: sale
 #: code:addons/sale/wizard/sale_make_invoice_advance.py:101
 #, python-format
 msgid "Incorrect Data"
-msgstr ""
+msgstr "錯誤的資料"
 
 #. module: sale
 #: code:addons/sale/wizard/sale_make_invoice_advance.py:102
 #, python-format
 msgid "The value of Advance Amount must be positive."
-msgstr ""
+msgstr "預付款金額必須為正值(大於零)"
 
 #. module: sale
 #: help:sale.config.settings,group_discount_per_so_line:0
 msgid "Allows you to apply some discount per sales order line."
-msgstr ""
+msgstr "讓您可以對銷售訂單每個項目給予折扣"
 
 #. module: sale
 #: view:sale.order.line:0
 msgid "Sales Order Lines that are in 'done' state"
-msgstr ""
+msgstr "銷售訂單項目在完成狀態"
 
 #. module: sale
 #: selection:sale.order.line,type:0
@@ -257,7 +263,7 @@ msgstr "按要求"
 #. module: sale
 #: field:sale.order,message_ids:0
 msgid "Messages"
-msgstr ""
+msgstr "訊息"
 
 #. module: sale
 #: field:sale.report,state:0
@@ -303,6 +309,8 @@ msgid ""
 "replenishment.\n"
 "On order: When needed, the product is purchased or produced."
 msgstr ""
+"從庫存：當需要時，產品由庫存取得或等待庫存回補。\n"
+"依訂單：當需要時，產品是經由採購或自行生產。"
 
 #. module: sale
 #: help:sale.config.settings,module_analytic_user_function:0
@@ -326,22 +334,22 @@ msgstr "已取消"
 #. module: sale
 #: view:sale.order.line:0
 msgid "Sales Order Lines related to a Sales Order of mine"
-msgstr ""
+msgstr "與我的銷售訂單相關的訂單項目"
 
 #. module: sale
 #: selection:sale.order,state:0
 msgid "Quotation Sent"
-msgstr ""
+msgstr "報價單已送出"
 
 #. module: sale
 #: model:ir.model,name:sale.model_mail_compose_message
 msgid "Email composition wizard"
-msgstr ""
+msgstr "電子郵件撰寫精靈"
 
 #. module: sale
 #: help:sale.order,message_unread:0
 msgid "If checked new messages require your attention."
-msgstr ""
+msgstr "當有新訊息時通知您。"
 
 #. module: sale
 #: selection:sale.order,state:0
@@ -375,12 +383,12 @@ msgstr "發票地址"
 #. module: sale
 #: help:sale.order,create_date:0
 msgid "Date on which sales order is created."
-msgstr ""
+msgstr "銷售訂單於該日期建立。"
 
 #. module: sale
 #: view:res.partner:0
 msgid "False"
-msgstr ""
+msgstr "否"
 
 #. module: sale
 #: help:sale.advance.payment.inv,advance_payment_method:0
@@ -396,12 +404,12 @@ msgstr ""
 #: view:sale.make.invoice:0
 #: view:sale.order.line.make.invoice:0
 msgid "Create Invoices"
-msgstr ""
+msgstr "開立發票"
 
 #. module: sale
 #: report:sale.order:0
 msgid "Tax"
-msgstr ""
+msgstr "稅"
 
 #. module: sale
 #: code:addons/sale/sale.py:277
@@ -409,7 +417,7 @@ msgstr ""
 #: code:addons/sale/sale.py:983
 #, python-format
 msgid "Invalid Action!"
-msgstr ""
+msgstr "無效的動作"
 
 #. module: sale
 #: help:sale.order,state:0
@@ -425,13 +433,13 @@ msgstr ""
 #. module: sale
 #: field:sale.report,date_confirm:0
 msgid "Date Confirm"
-msgstr ""
+msgstr "確認日期"
 
 #. module: sale
 #: view:sale.report:0
 #: field:sale.report,nbr:0
 msgid "# of Lines"
-msgstr ""
+msgstr "明細數"
 
 #. module: sale
 #: help:sale.order,message_summary:0
@@ -449,7 +457,7 @@ msgstr ""
 #: view:sale.report:0
 #: field:sale.report,product_uom_qty:0
 msgid "# of Qty"
-msgstr ""
+msgstr "數量"
 
 #. module: sale
 #: report:sale.order:0
@@ -461,24 +469,24 @@ msgstr "傳真 :"
 #, python-format
 msgid ""
 "In order to delete a confirmed sales order, you must cancel it before !"
-msgstr ""
+msgstr "要刪除已確認的銷售訂單前，您必須先取消它。"
 
 #. module: sale
 #: view:sale.order:0
 msgid "(update)"
-msgstr ""
+msgstr "(更新)"
 
 #. module: sale
 #: model:ir.model,name:sale.model_res_partner
 #: view:sale.report:0
 #: field:sale.report,partner_id:0
 msgid "Partner"
-msgstr ""
+msgstr "業務夥伴"
 
 #. module: sale
 #: view:sale.config.settings:0
 msgid "Contract Features"
-msgstr ""
+msgstr "合約功能"
 
 #. module: sale
 #: code:addons/sale/sale.py:287
@@ -497,7 +505,7 @@ msgstr "銷貨單"
 #. module: sale
 #: model:res.groups,name:sale.group_invoice_so_lines
 msgid "Enable Invoicing Sales order lines"
-msgstr ""
+msgstr "允許依銷售訂單逐項開立發票"
 
 #. module: sale
 #: model:ir.model,name:sale.model_sale_order_line
@@ -507,7 +515,7 @@ msgstr "銷貨單明㚼"
 #. module: sale
 #: field:sale.advance.payment.inv,amount:0
 msgid "Advance Amount"
-msgstr ""
+msgstr "預付款總額"
 
 #. module: sale
 #: help:sale.order,invoice_exists:0
@@ -524,12 +532,12 @@ msgstr ""
 #. module: sale
 #: field:sale.config.settings,module_analytic_user_function:0
 msgid "One employee can have different roles per contract"
-msgstr ""
+msgstr "一位員工在不同合約中可以有不同角色"
 
 #. module: sale
 #: selection:sale.advance.payment.inv,advance_payment_method:0
 msgid "Invoice the whole sales order"
-msgstr ""
+msgstr "依整張銷售訂單開立發票"
 
 #. module: sale
 #: field:sale.shop,payment_default_id:0
@@ -544,13 +552,13 @@ msgstr "確認"
 #. module: sale
 #: field:sale.config.settings,timesheet:0
 msgid "Prepare invoices based on timesheets"
-msgstr ""
+msgstr "準備依工時開立發票"
 
 #. module: sale
 #: code:addons/sale/sale.py:820
 #, python-format
 msgid "You cannot cancel a sales order line that has already been invoiced."
-msgstr ""
+msgstr "您無法取消已開發票的銷售訂單項目。"
 
 #. module: sale
 #: view:account.invoice.report:0
@@ -568,27 +576,27 @@ msgstr "已運送數量"
 #: view:sale.report:0
 #: field:sale.report,year:0
 msgid "Year"
-msgstr ""
+msgstr "年"
 
 #. module: sale
 #: field:sale.config.settings,group_uom:0
 msgid "Allow using different units of measures"
-msgstr ""
+msgstr "允許使用不同的度量單位"
 
 #. module: sale
 #: model:mail.message.subtype,name:sale.mt_order_confirmed
 msgid "Sales Order Confirmed"
-msgstr ""
+msgstr "銷售訂單已確認"
 
 #. module: sale
 #: view:sale.order:0
 msgid "Sales Order that haven't yet been confirmed"
-msgstr ""
+msgstr "尚未確認的銷售訂單"
 
 #. module: sale
 #: view:sale.order:0
 msgid "Print"
-msgstr ""
+msgstr "列印"
 
 #. module: sale
 #: report:sale.order:0
@@ -610,7 +618,7 @@ msgstr "折扣(%)"
 #: code:addons/sale/sale.py:764
 #, python-format
 msgid "Please define income account for this product: \"%s\" (id:%d)."
-msgstr ""
+msgstr "請為此產品定義收益科目  \"%s\" (id:%d) 。"
 
 #. module: sale
 #: field:sale.order.line,invoice_lines:0
@@ -626,7 +634,7 @@ msgstr "總價"
 #. module: sale
 #: help:account.config.settings,group_analytic_account_for_sales:0
 msgid "Allows you to specify an analytic account on sales orders."
-msgstr ""
+msgstr "讓您可為銷售訂單指定一分析科目。"
 
 #. module: sale
 #: help:sale.config.settings,module_sale_journal:0
@@ -640,24 +648,24 @@ msgstr ""
 #. module: sale
 #: help:sale.make.invoice,grouped:0
 msgid "Check the box to group the invoices for the same customers"
-msgstr ""
+msgstr "點選此項目，發票將以同一客戶分群"
 
 #. module: sale
 #: model:ir.actions.act_window,name:sale.action_sale_order_make_invoice
 #: model:ir.actions.act_window,name:sale.action_view_sale_order_line_make_invoice
 msgid "Make Invoices"
-msgstr ""
+msgstr "開立發票"
 
 #. module: sale
 #: code:addons/sale/res_config.py:97
 #, python-format
 msgid "Hour"
-msgstr ""
+msgstr "時"
 
 #. module: sale
 #: field:res.partner,sale_order_count:0
 msgid "# of Sales Order"
-msgstr ""
+msgstr "銷售訂單數量"
 
 #. module: sale
 #: help:sale.config.settings,timesheet:0
@@ -672,18 +680,18 @@ msgstr ""
 #. module: sale
 #: field:sale.order,create_date:0
 msgid "Creation Date"
-msgstr ""
+msgstr "建立日期"
 
 #. module: sale
 #: view:sale.order:0
 #: view:sale.order.line:0
 msgid "To Invoice"
-msgstr ""
+msgstr "待開發票"
 
 #. module: sale
 #: help:sale.order,partner_invoice_id:0
 msgid "Invoice address for current sales order."
-msgstr ""
+msgstr "當前銷售訂單的發票地址。"
 
 #. module: sale
 #: selection:sale.order,invoice_quantity:0
@@ -693,12 +701,12 @@ msgstr "已訂數量"
 #. module: sale
 #: view:sale.report:0
 msgid "Ordered Year of the sales order"
-msgstr ""
+msgstr "銷售訂單的年份"
 
 #. module: sale
 #: model:res.groups,name:sale.group_delivery_invoice_address
 msgid "Addresses in Sales Orders"
-msgstr ""
+msgstr "銷售訂單中的地址"
 
 #. module: sale
 #: field:sale.advance.payment.inv,qtty:0
@@ -720,7 +728,7 @@ msgstr ""
 #. module: sale
 #: view:sale.report:0
 msgid "My Sales"
-msgstr ""
+msgstr "我的業務銷售"
 
 #. module: sale
 #: field:sale.order,name:0
@@ -736,7 +744,7 @@ msgstr ""
 #. module: sale
 #: selection:sale.report,month:0
 msgid "July"
-msgstr ""
+msgstr "七月"
 
 #. module: sale
 #: help:sale.order.line,state:0
@@ -755,7 +763,7 @@ msgstr ""
 #. module: sale
 #: view:sale.config.settings:0
 msgid "Default Options"
-msgstr ""
+msgstr "預設選項"
 
 #. module: sale
 #: code:addons/sale/sale.py:960
@@ -768,7 +776,7 @@ msgstr "設定錯誤！"
 #. module: sale
 #: field:account.config.settings,group_analytic_account_for_sales:0
 msgid "Analytic accounting for sales"
-msgstr ""
+msgstr "業務銷售分析科目"
 
 #. module: sale
 #: view:sale.order:0
@@ -800,7 +808,7 @@ msgstr "EDI 價目表 (%s)"
 #. module: sale
 #: selection:sale.order,order_policy:0
 msgid "On Delivery Order"
-msgstr ""
+msgstr "依送貨單"
 
 #. module: sale
 #: view:sale.config.settings:0
@@ -810,24 +818,24 @@ msgstr "發票程序"
 #. module: sale
 #: view:sale.order:0
 msgid "Order Date"
-msgstr ""
+msgstr "訂單日期"
 
 #. module: sale
 #: view:sale.order:0
 msgid "Sales Order done"
-msgstr ""
+msgstr "銷售訂單已完成"
 
 #. module: sale
 #: code:addons/sale/sale.py:364
 #, python-format
 msgid "Please define sales journal for this company: \"%s\" (id:%d)."
-msgstr ""
+msgstr "請為此公司 \"%s\" (id:%d) 定義銷售日記帳。"
 
 #. module: sale
 #: model:ir.actions.act_window,name:sale.act_res_partner_2_sale_order
 #: view:res.partner:0
 msgid "Quotations and Sales"
-msgstr ""
+msgstr "報價與業務銷售"
 
 #. module: sale
 #: field:sale.order,invoiced:0
@@ -838,12 +846,12 @@ msgstr "已付"
 #: help:sale.config.settings,group_uom:0
 msgid ""
 "Allows you to select and maintain different units of measure for products."
-msgstr ""
+msgstr "允許您針對產品選擇與維護不同的度量單位"
 
 #. module: sale
 #: view:sale.report:0
 msgid "Reference Unit of Measure"
-msgstr ""
+msgstr "參考度量單位"
 
 #. module: sale
 #: view:sale.advance.payment.inv:0
