--- a/account/i18n/ja.po
+++ b/account/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-14 22:29+0000\n"
-"PO-Revision-Date: 2013-12-23 17:35+0000\n"
+"PO-Revision-Date: 2013-12-24 14:45+0000\n"
 "Last-Translator: hiro TAKADA <tkhiro0712@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-12-24 05:52+0000\n"
+"X-Launchpad-Export-Date: 2013-12-25 06:35+0000\n"
 "X-Generator: Launchpad (build 16877)\n"
 
 #. module: account
@@ -309,6 +309,14 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                クリックして顧客返金を登録してください。\n"
+"              </p><p>\n"
+"                返金は請求書を完全または部分的にクレジットする文書です。\n"
+"              </p><p>\n"
+"                顧客返金をマニュアルで登録する代わりに、関連する顧客請求書から直接生成することもできます。\n"
+"              </p>\n"
+"            "
 
 #. module: account
 #: help:account.installer,charts:0
@@ -6475,6 +6483,12 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                クリックして仕入先からの返金を登録してください。\n"
+"              </p><p>\n"
+"                仕入先返金をマニュアルで登録する代わりに、関連する仕入先請求書から返金と消し込みを直接生成することもできます。\n"
+"</p>\n"
+"            "
 
 #. module: account
 #: field:account.tax,type:0
