--- a/sale/i18n/zh_TW.po
+++ b/sale/i18n/zh_TW.po
@@ -7,13 +7,13 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0dev_rc3\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2012-12-21 17:04+0000\n"
-"PO-Revision-Date: 2013-12-24 11:05+0000\n"
+"PO-Revision-Date: 2013-12-25 09:29+0000\n"
 "Last-Translator: Andy Cheng <andy@dobtor.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-12-25 06:02+0000\n"
+"X-Launchpad-Export-Date: 2013-12-26 06:05+0000\n"
 "X-Generator: Launchpad (build 16877)\n"
 
 #. module: sale
@@ -95,6 +95,8 @@ msgid ""
 "${(object.name or '').replace('/','_')}_${object.state == 'draft' and "
 "'draft' or ''}"
 msgstr ""
+"${(object.name or '').replace('/','_')}_${object.state == 'draft' and "
+"'draft' or ''}"
 
 #. module: sale
 #: view:sale.order.line:0
@@ -323,6 +325,10 @@ msgid ""
 "available.\n"
 "                This installs the module analytic_user_function."
 msgstr ""
+"讓您可以自行定義某個使用者於指定科目的預設功能。\n"
+"主要用於當使用者加密自己的工時表。\n"
+"數值會自動取得，欄位會自動填入。但仍然可以更改相關數值。\n"
+"本功能會附帶安裝  analytic_user_function 模組。"
 
 #. module: sale
 #: selection:sale.order,state:0
@@ -399,6 +405,10 @@ msgid ""
 "                Use Some Order Lines to invoice a selection of the sales "
 "order lines."
 msgstr ""
+"依全部金額開立最終發票。\n"
+"                依「百分比」來按總金額比例開立發票。\n"
+"                依「固定金額」來開立預付款項的發票。\n"
+"                依「部分訂單項目」按所選的訂單項目開立發票。"
 
 #. module: sale
 #: view:sale.make.invoice:0
@@ -723,7 +733,7 @@ msgstr "總計 :"
 #. module: sale
 #: view:sale.order.line:0
 msgid "Sales Order Lines ready to be invoiced"
-msgstr ""
+msgstr "銷售訂單項目已可開立發票"
 
 #. module: sale
 #: view:sale.report:0
@@ -739,7 +749,7 @@ msgstr "訂單參考"
 #. module: sale
 #: field:sale.order,fiscal_position:0
 msgid "Fiscal Position"
-msgstr ""
+msgstr "財務結構"
 
 #. module: sale
 #: selection:sale.report,month:0
@@ -759,6 +769,11 @@ msgid ""
 "             \n"
 "* The 'Cancelled' status is set when a user cancel the sales order related."
 msgstr ""
+"* 「草稿」狀態，指相關的銷售訂單仍是草稿。 \n"
+"* 「確認」狀態，指相關的銷售訂單已完成確認。  \n"
+"* 「異常」狀態，指相關的銷售訂單有異常狀態 。\n"
+"* 「完成」狀態，指相關的銷售訂單已經完成取貨時。  \n"
+"* 「取消」狀態，指使用者取消該銷售訂單。"
 
 #. module: sale
 #: view:sale.config.settings:0
@@ -792,7 +807,7 @@ msgstr "狀態"
 msgid ""
 "After clicking 'Show Lines to Invoice', select lines to invoice and create "
 "the invoice from the 'More' dropdown menu."
-msgstr ""
+msgstr "點選 「依訂單項目開立發票」 後，選擇要開發票的項目並從下拉式選項「更多」 建立發票。"
 
 #. module: sale
 #: view:sale.order:0
@@ -861,7 +876,7 @@ msgstr "開立並檢視發票"
 #. module: sale
 #: view:sale.order.line:0
 msgid "Sales order lines done"
-msgstr ""
+msgstr "銷售訂單項目已完成"
 
 #. module: sale
 #: field:sale.make.invoice,grouped:0
@@ -871,7 +886,7 @@ msgstr "發票分類"
 #. module: sale
 #: help:sale.advance.payment.inv,amount:0
 msgid "The amount to be invoiced in advance."
-msgstr ""
+msgstr "預付款發票總金額"
 
 #. module: sale
 #: model:ir.model,name:sale.model_sale_make_invoice
@@ -882,7 +897,7 @@ msgstr ""
 #: code:addons/sale/sale.py:307
 #, python-format
 msgid "Pricelist Warning!"
-msgstr ""
+msgstr "價格表警示！"
 
 #. module: sale
 #: field:sale.order.line,discount:0
@@ -902,7 +917,7 @@ msgstr ""
 #. module: sale
 #: view:sale.order.line.make.invoice:0
 msgid "Create & View Invoice"
-msgstr ""
+msgstr "新增並檢視發票"
 
 #. module: sale
 #: view:board.board:0
@@ -918,7 +933,7 @@ msgstr "發票"
 #. module: sale
 #: selection:sale.report,month:0
 msgid "December"
-msgstr ""
+msgstr "十二月"
 
 #. module: sale
 #: view:sale.config.settings:0
@@ -934,17 +949,17 @@ msgstr "已出貨"
 #: view:sale.report:0
 #: field:sale.report,month:0
 msgid "Month"
-msgstr ""
+msgstr "月"
 
 #. module: sale
 #: field:sale.order,currency_id:0
 msgid "Currency"
-msgstr ""
+msgstr "貨幣"
 
 #. module: sale
 #: view:sale.order.line:0
 msgid "Uninvoiced"
-msgstr ""
+msgstr "未開立發票"
 
 #. module: sale
 #: view:sale.report:0
@@ -956,7 +971,7 @@ msgstr "產品類別"
 #: code:addons/sale/sale.py:564
 #, python-format
 msgid "Cannot cancel this sales order!"
-msgstr ""
+msgstr "無法取消此銷售訂單!"
 
 #. module: sale
 #: view:sale.order:0
@@ -966,7 +981,7 @@ msgstr "重新開立發票"
 #. module: sale
 #: field:sale.config.settings,module_warning:0
 msgid "Allow configuring alerts by customer or products"
-msgstr ""
+msgstr "可依客戶或產品來設定警示訊息"
 
 #. module: sale
 #: field:sale.shop,name:0
@@ -976,7 +991,7 @@ msgstr "商店名稱"
 #. module: sale
 #: view:sale.order:0
 msgid "My Sales Orders"
-msgstr ""
+msgstr "我的銷售訂單"
 
 #. module: sale
 #: report:sale.order:0
@@ -1005,7 +1020,7 @@ msgstr ""
 #. module: sale
 #: model:ir.actions.client,name:sale.action_client_sale_menu
 msgid "Open Sale Menu"
-msgstr ""
+msgstr "開啟業務銷售選單"
 
 #. module: sale
 #: code:addons/sale/sale.py:598
@@ -1027,7 +1042,7 @@ msgstr "未定義客戶 !"
 #. module: sale
 #: field:sale.config.settings,module_sale_stock:0
 msgid "Trigger delivery orders automatically from sales orders"
-msgstr ""
+msgstr "由銷售訂單自動帶出送貨單"
 
 #. module: sale
 #: view:sale.make.invoice:0
@@ -1044,7 +1059,7 @@ msgstr "確認"
 #: code:addons/sale/wizard/sale_make_invoice_advance.py:106
 #, python-format
 msgid "Advance of %s %%"
-msgstr ""
+msgstr "%s %%的預付款"
 
 #. module: sale
 #: model:ir.model,name:sale.model_sale_order_line_make_invoice
@@ -1064,12 +1079,12 @@ msgstr "郵件範本"
 #. module: sale
 #: help:sale.order.line,address_allotment_id:0
 msgid "A partner to whom the particular product needs to be allotted."
-msgstr ""
+msgstr "業務夥伴有特定產品業務分配"
 
 #. module: sale
 #: field:sale.order,project_id:0
 msgid "Contract / Analytic"
-msgstr ""
+msgstr "合約 / 分析"
 
 #. module: sale
 #: selection:sale.order,state:0
@@ -1080,7 +1095,7 @@ msgstr "等待排程"
 #. module: sale
 #: field:sale.order,note:0
 msgid "Terms and conditions"
-msgstr ""
+msgstr "條款"
 
 #. module: sale
 #: model:ir.actions.act_window,name:sale.action_orders
@@ -1092,37 +1107,37 @@ msgstr "銷貨單"
 #. module: sale
 #: help:sale.order,amount_tax:0
 msgid "The tax amount."
-msgstr ""
+msgstr "稅額"
 
 #. module: sale
 #: field:sale.order,invoiced_rate:0
 msgid "Invoiced Ratio"
-msgstr ""
+msgstr "已開發票比例"
 
 #. module: sale
 #: selection:sale.order,order_policy:0
 msgid "On Demand"
-msgstr ""
+msgstr "應需求"
 
 #. module: sale
 #: selection:sale.report,month:0
 msgid "August"
-msgstr ""
+msgstr "八月"
 
 #. module: sale
 #: model:process.node,note:sale.process_node_saleorder0
 msgid "Drives procurement and invoicing"
-msgstr ""
+msgstr "驅動採購與開立發票"
 
 #. module: sale
 #: view:sale.order.line:0
 msgid "To Do"
-msgstr ""
+msgstr "待辦"
 
 #. module: sale
 #: selection:sale.report,month:0
 msgid "June"
-msgstr ""
+msgstr "六月"
 
 #. module: sale
 #: model:ir.actions.act_window,help:sale.action_shop_form
@@ -1148,12 +1163,12 @@ msgstr "訂單"
 #: model:ir.ui.menu,name:sale.menu_report_product_all
 #: view:sale.report:0
 msgid "Sales Analysis"
-msgstr ""
+msgstr "業務銷售分析"
 
 #. module: sale
 #: field:sale.order,message_is_follower:0
 msgid "Is a Follower"
-msgstr ""
+msgstr "為關注者"
 
 #. module: sale
 #: view:sale.order.line:0
@@ -1165,7 +1180,7 @@ msgstr ""
 #. module: sale
 #: model:ir.model,name:sale.model_sale_report
 msgid "Sales Orders Statistics"
-msgstr ""
+msgstr "銷售訂單統計"
 
 #. module: sale
 #: field:sale.order,date_order:0
@@ -1181,12 +1196,12 @@ msgstr ""
 #: view:sale.report:0
 #: field:sale.report,user_id:0
 msgid "Salesperson"
-msgstr ""
+msgstr "銷售人員"
 
 #. module: sale
 #: selection:sale.report,month:0
 msgid "November"
-msgstr ""
+msgstr "十一月"
 
 #. module: sale
 #: view:sale.report:0
@@ -1213,7 +1228,7 @@ msgstr "異常情況"
 #. module: sale
 #: selection:sale.report,month:0
 msgid "October"
-msgstr ""
+msgstr "十月"
 
 #. module: sale
 #: model:process.transition,note:sale.process_transition_invoice0
