--- a/purchase_double_validation/i18n/pt.po
+++ b/purchase_double_validation/i18n/pt.po
@@ -7,14 +7,14 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 6.0.2\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-01-11 11:15+0000\n"
-"PO-Revision-Date: 2012-04-04 15:13+0000\n"
-"Last-Translator: ThinkOpen Solutions <Unknown>\n"
+"PO-Revision-Date: 2013-12-27 18:36+0000\n"
+"Last-Translator: António Sequeira <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-08-28 08:20+0000\n"
-"X-Generator: Launchpad (build 15864)\n"
+"X-Launchpad-Export-Date: 2013-12-28 05:28+0000\n"
+"X-Generator: Launchpad (build 16877)\n"
 
 #. module: purchase_double_validation
 #: view:purchase.double.validation.installer:0
@@ -40,7 +40,7 @@ msgstr "Título"
 #. module: purchase_double_validation
 #: model:ir.module.module,shortdesc:purchase_double_validation.module_meta_information
 msgid "purchase_double_validation"
-msgstr "purchase_double_validation"
+msgstr "Dupla validação da compra"
 
 #. module: purchase_double_validation
 #: field:purchase.double.validation.installer,config_logo:0
