--- a/account_budget/i18n/zh_TW.po
+++ b/account_budget/i18n/zh_TW.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-01-30 13:17+0000\n"
-"Last-Translator: Charles Hsu <chaoyee22@gmail.com>\n"
+"PO-Revision-Date: 2013-12-29 17:11+0000\n"
+"Last-Translator: Andy Cheng <andy@dobtor.com>\n"
 "Language-Team: Chinese (Traditional) <zh_TW@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-21 05:58+0000\n"
-"X-Generator: Launchpad (build 16831)\n"
+"X-Launchpad-Export-Date: 2013-12-30 05:06+0000\n"
+"X-Generator: Launchpad (build 16877)\n"
 
 #. module: account_budget
 #: view:account.budget.analytic:0
@@ -369,7 +369,7 @@ msgstr "或"
 #. module: account_budget
 #: view:crossovered.budget:0
 msgid "Cancel Budget"
-msgstr ""
+msgstr "取消預算"
 
 #. module: account_budget
 #: report:account.budget:0
