--- a/sale_mrp/i18n/zh_TW.po
+++ b/sale_mrp/i18n/zh_TW.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2013-12-29 17:05+0000\n"
+"PO-Revision-Date: 2013-12-29 16:52+0000\n"
 "Last-Translator: Andy Cheng <andy@dobtor.com>\n"
 "Language-Team: Chinese (Traditional) <zh_TW@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -17,9 +17,27 @@ msgstr ""
 "X-Launchpad-Export-Date: 2013-12-30 05:07+0000\n"
 "X-Generator: Launchpad (build 16877)\n"
 
-#. module: web_shortcuts
-#. openerp-web
-#: code:addons/web_shortcuts/static/src/xml/web_shortcuts.xml:21
-#, python-format
-msgid "Add / Remove Shortcut..."
-msgstr "新增/移除捷徑..."
+#. module: sale_mrp
+#: model:ir.model,name:sale_mrp.model_mrp_production
+msgid "Manufacturing Order"
+msgstr "生產單"
+
+#. module: sale_mrp
+#: help:mrp.production,sale_name:0
+msgid "Indicate the name of sales order."
+msgstr "指出銷售訂單名稱。"
+
+#. module: sale_mrp
+#: help:mrp.production,sale_ref:0
+msgid "Indicate the Customer Reference from sales order."
+msgstr "指出銷售訂單中的客戶參考。"
+
+#. module: sale_mrp
+#: field:mrp.production,sale_ref:0
+msgid "Sale Reference"
+msgstr "銷售參考"
+
+#. module: sale_mrp
+#: field:mrp.production,sale_name:0
+msgid "Sale Name"
+msgstr "銷售名稱"
